# vuoro

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  vuoro.dispatch.json
.agents/: project.generated.md
.agents/overlays/: vuoro.boundaries.md
.agents/skills/backlog-refinement/: SKILL.md
.agents/skills/code-change-verification/: SKILL.md
.agents/skills/dispatch-build/: SKILL.md
.agents/skills/dispatch-plan/: SKILL.md
.agents/skills/dispatch-review/: SKILL.md
.agents/skills/item-done/: SKILL.md
.agents/skills/reconcile-project-contracts/: SKILL.md
.agents/skills/verify-state-protocols/: SKILL.md
.claude/skills/: backlog-refinement  dispatch-build  dispatch-plan  dispatch-review  item-done  reconcile-project-contracts  verify-state-protocols
.github/workflows/: ci.yml  publish-service-image.yaml
deploy/compose/: README.md  compose.yaml  identities.example.json
deploy/compose/postgres/: init.sql
deploy/kustomize/base/: README.md  deployment.yaml  kustomization.yaml  migration-jobs.yaml  network-policy.yaml  runtime-config.yaml  service-account.yaml  service.yaml
docs/architecture/: packaging.md  protocol-v1.md
scripts/: fetch_pinned_adapters.py
tests/: test_deployment_assets.py  test_distribution_boundaries.py  test_environment_context_injection.py  test_invocation_v2_transport.py  test_protocol_v1_dynamic_client.py
verification/results/: vuoro-neutral-service-packaging-item-1205.json
