[project]
name = "vuoro-workspace"
version = "0.1.0.dev0"
description = "Development workspace for the Vuoro client and service distributions"
requires-python = ">=3.12"

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
  "packages/vuoro-client",
  "packages/vuoro-service",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = [
  "packages/vuoro-client/tests",
  "packages/vuoro-service/tests",
  "tests",
]
